# AOC2020

./: CMakeLists.txt  Program.cs
.github/workflows/: main.yml
Common/: ArrayExtension.cs  IO.cs  ISolution.cs  ListExtension.cs  SolutionClassAttribute.cs  SolutionMethodAttribute.cs  SolutionType.cs  Solver.cs
Day01/: Day01.cs  Test.cs
Day02/: Day02.cs  Test.cs
Day03/: Day03.cs  Test.cs
Day04/: Day04.cs  Test.cs
Day05/: Day05.cs  Test.cs
Day06/: Day06.cs  Test.cs
Day07/: Day07.cs  Test.cs
Day08/: Day08.cs  Test.cs
Day09/: Day09.cs  Test.cs
Day10/: Day10.cs  Test.cs
Day11/: Day11.cs  Test.cs
Day12/: Day12.cs  Test.cs
Day13/: Day13.cs  Test.cs
Day14/: Day14.cs  Test.cs
Day15/: Day15.cs  Test.cs
Day16/: Day16.cs  Test.cs
Day17/: Day17.cs  Test.cs
Day18/: Day18.cs  Test.cs
Day19/: Day19.cs  Test.cs
Day20/: Day20.cs  Test.cs
Day21/: Day21.cs  Test.cs
Day22/: Day22.cs  Test.cs
Day23/: Day23.cs  Test.cs
Day24/: Day24.cs  Test.cs
Day25/: Day25.cs  Test.cs
Solutions/: Day01.cs  Day02.cs  Day03.cs  Day04.cs
Tests/: Day01Test.cs  Day02Test.cs  Day03Test.cs  Day04Test.cs
